# PLUMBOBFIX

./: .gitignore  LICENSE  README.md  build_installer.py  installer.py  prompt  pyproject.toml
simdoc/: __init__.py  __main__.py  simdoc.py
simdoc/core/: paths.py  reporting.py  state.py  util.py
simdoc/detectors/: scan_mods.py  update_check.py
simdoc/fixers/: native.py  py_compat.py  tuning_conflicts.py
simdoc/parsers/: last_exception.py
simdoc/tests/: test_paths.py  test_pycompat.py  test_scan.py  test_state.py
